@@ -77,6 +77,7 @@ namespace pan
 
     private:
       virtual void on_progress_finished (Progress&, int status);
+      virtual void on_progress_error (Progress&, const StringView&);
 
     private:
       Data& _data;
