@@ -45,7 +45,7 @@ namespace pan
 
     private: // NNTP::Listener's virtual functions
       virtual void on_nntp_line (NNTP*, const StringView&);
-      virtual void on_nntp_done (NNTP*, Health);
+      virtual void on_nntp_done (NNTP*, Health, const StringView&);
 
     private: // implementation
       Data& _data;
