@@ -3,6 +3,7 @@
 0.117 "asdf"
  361121 pan icon love (Michael Monreal)
  355047 article download becomes saving after restart (K Haley, Duncan)
+ 360406 pop up a message when post is refused by server (Frederic Crozat)
 
 0.116 "Blanton's"
  360375 non-ascii subject is mangled
